--- a/my-app/src/components/footer/styles.scss
+++ b/my-app/src/components/footer/styles.scss
@@ -1,13 +1,6 @@
 .footer {
-  background-color: #f8f9fa;
-  padding: 20px;
   text-align: center;
-}
-.wrapper {
-  display: flex;
-  justify-content: space-between;
-}
-.left_block {
-  display: flex;
-  gap: 10px;
+  padding: 1rem;
+  background-color: #f0f0f0;
+  margin-top: auto;
 }
