--- a/my-app/src/components/header/styles.scss
+++ b/my-app/src/components/header/styles.scss
@@ -4,12 +4,10 @@ width: 100%;
 height: 345px;
 color: black;
 display: flex;
-justify-content: center;
+justify-content: space-between;
 align-items: flex-end;
-&h2{
-    margin-bottom: 100px;
+&.headerLogo{
+    font-size: 1.5rem;
+    font-weight: bold;
 }
-
-
-
 }
