--- a/my-app/src/components/heroSec/aboutHero/styles.scss
+++ b/my-app/src/components/heroSec/aboutHero/styles.scss
@@ -1,53 +1,68 @@
+
 .about-hero {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
     padding: 40px 20px;
     // background: url('path/to/background-image.svg') no-repeat center center;
     background-size: cover;
     position: relative;
   
     .about-hero-content {
-      max-width: 800px;
-      margin-bottom: 40px;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      max-width: 1200px;
+      margin: 0 auto;
+      text-align: left;
   
       h2 {
         font-size: 2.5rem;
         margin-bottom: 20px;
+        flex-basis: 100%;
       }
   
       p {
         font-size: 1.2rem;
+        flex: 1;
         margin-bottom: 20px;
       }
-    }
   
-    .about-hero-image {
-      max-width: 600px;
-      margin-bottom: 40px;
+      .about-hero-image {
+        flex: 1;
+        text-align: right;
+        margin-left: 20px;
   
-      img {
-        width: 100%;
-        height: auto;
+        img {
+          max-width: 100%;
+          height: auto;
+          border-radius: 15px;
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
       }
     }
   
     .about-hero-icons {
       display: flex;
       justify-content: space-around;
-      width: 100%;
-      max-width: 800px;
+      flex-wrap: wrap;
+      margin-top: 40px;
   
       .icon {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 0 10px;
+        flex: 1;
+        min-width: 250px;
+        margin: 20px;
+        text-align: center;
+
   
         img {
-          width: 50px;
-          height: 50px;
+          width: 100px;
+          height: 100px;
+          margin-bottom: 10px;
+          display: block;
+         margin-left: auto;
+        margin-right: auto;
+        }
+  
+        h3 {
+          font-size: 1.5rem;
           margin-bottom: 10px;
         }
   
@@ -56,16 +71,29 @@
           color: #333;
         }
       }
-    }
   
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: rgba(255, 255, 255, 0.8);
-      z-index: -1;
+      .special-icon {
+        background-color: #8fffee;
+        border-radius: 15px;
+        padding: 20px;
+        position: relative;
+  
+        .cta-button {
+          margin-top: 20px;
+          padding: 10px 20px;
+          font-size: 1rem;
+          color: white;
+          background-color: #0366d6;
+          border: none;
+          border-radius: 5px;
+          cursor: pointer;
+          transition: background-color 0.3s;
+  
+          &:hover {
+            background-color: #024aa8;
+          }
+        }
+      }
     }
   }
+  
