--- a/my-app/src/components/heroSec/homeHero/styles.scss
+++ b/my-app/src/components/heroSec/homeHero/styles.scss
@@ -1,57 +1,72 @@
 .hero {
   position: relative;
-  width: 100%;
-  height: 60vh;  // Adjust this value to change the height
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-size: cover;
   background-position: center;
-  display: flex;
-  flex-direction: column; // Stack items vertically
-  align-items: center;
-  justify-content: flex-start; // Align items to the top
-  color: #fff;
-  text-align: center;
-  padding: 20px; // Add padding to create space at the top
-}
+  overflow: hidden;
 
-.hero::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5); /* Add overlay for readability */
-}
+  &-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.7);
+  }
 
-.hero-content {
-  position: relative;
-  z-index: 1;
-  margin-top: 20px; // Adjust this value to create space from the top
-}
+  &-content {
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    max-width: 800px;
+    padding: 0 20px;
+  }
 
-.hero-heading {
-  font-size: 3rem;
-  @media (min-width: 768px) {
+  &-heading {
     font-size: 4rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+    color: #0049f4;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   }
-  @media (min-width: 1024px) {
-    font-size: 5rem;
-  }
-  margin-bottom: 20px;
-}
 
-.hero-subheading {
-  font-size: 1.5rem;
-  @media (min-width: 768px) {
+  &-subheading {
     font-size: 2rem;
+    font-weight: 500;
+    margin-bottom: 2rem;
+    color: #000000;
+    letter-spacing: 1px;
+    line-height: 1.4;
+    text-transform: uppercase;
+    border-bottom: 2px solid #019354;
+    display: inline-block;
+    padding-bottom: 10px;
   }
-  @media (min-width: 1024px) {
-    font-size: 2.5rem;
-  }
-  margin-bottom: 30px;
-}
 
-.hero-cta {
-  font-size: 1.2rem;
-  padding: 10px 20px;
+  button[type="submit"] {
+    background-color: #4c01b2;
+    color: white;
+    border: none; 
+    border-radius: 15px; 
+    padding: 10px 20px; 
+    font-size: 1.3rem; 
+    cursor: pointer; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    transition: all 0.3s ease;
+  }
+  
+  .button:hover {
+    background-color: #be8fff;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5); 
+    transform: translateY(-5px); 
+  }
+  
+  .buttonArea {
+    text-align: center;
+    margin-bottom: 50px;
+  }
+
 }
