--- a/my-app/src/components/heroSec/aboutHero/styles.scss
+++ b/my-app/src/components/heroSec/aboutHero/styles.scss
@@ -17,6 +17,7 @@
         font-size: 2.5rem;
         margin-bottom: 20px;
         flex-basis: 100%;
+        text-align: center;
       }
   
       p {
