--- a/my-app/src/components/heroSec/contactHero/styles.css
+++ b/my-app/src/components/heroSec/contactHero/styles.css
@@ -42,8 +42,8 @@ body {
 }
 
 .social-icons {
-  width: 25px; /* Adjust size */
-  height: 25px; /* Adjust size */
+  width: 25px;
+  height: 25px;
   margin: 10px;
 }
 
