--- a/my-app/src/components/heroSec/contactHero/styles.scss
+++ b/my-app/src/components/heroSec/contactHero/styles.scss
@@ -21,7 +21,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     height: 60vh;
-  }
+  } 
   
   .info-image {
     width: 200px;
@@ -42,8 +42,8 @@ body {
   }
   
   .social-icons {
-    width: 25px; /* Adjust size */
-    height: 25px; /* Adjust size */
+    width: 25px; 
+    height: 25px; 
     margin: 10px;
   }
   
